# Claims_Orchestration

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
data/eval/: claims_eval.jsonl
data/sample/: sample_fnol.json
infrastructure/bicep/: main.bicep  parameters.dev.json.example
scripts/: bootstrap.py  deploy_container_apps.sh
src/: config.py  models.py
src/agents/: agents.py
src/api/: main.py
src/crews/: decision_crew.py  intake_crew.py
src/mcp_servers/claims_mcp/: server.py
src/mcp_servers/fraud_mcp/: server.py
src/mcp_servers/policy_mcp/: server.py
src/mcp_servers/slack_mcp/: server.py
src/mcp_servers/workforce_mcp/: server.py
src/messaging/: redis_queue.py
src/observability/: mlflow_tracker.py  tracing.py
src/rag/: chroma_rag.py
src/repositories/: blob_repository.py  cosmos_repository.py
src/tools/: mcp_adapter.py
src/workers/: decision_worker.py  intake_worker.py  settlement_worker.py
tests/: conftest.py
tests/eval/: __init__.py  run_eval.py
tests/integration/: test_api.py
tests/unit/: test_messaging_and_rag.py  test_models.py  test_repositories.py
