[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claims-orchestrator-option-b"
version = "1.0.0"
description = "AI Claims Processing Orchestrator — Option B Balanced Architecture"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # ── AI frameworks ──────────────────────────────────────────
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langchain-community>=0.3.7",

    # ── Azure AI (LLM only) ────────────────────────────────────
    "openai>=1.54.0",

    # ── Azure data services ────────────────────────────────────
    "azure-cosmos>=4.7.0",
    "azure-storage-blob>=12.23.0",
    "azure-identity>=1.19.0",
    "redis>=5.2.0",

    # ── RAG — ChromaDB (open source, no Azure AI Search) ──────
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.4",

    # ── MCP servers ────────────────────────────────────────────
    "fastmcp>=0.2.0",
    "mcp>=0.9.1",

    # ── API layer ──────────────────────────────────────────────
    "fastapi>=0.115.4",
    "uvicorn[standard]>=0.32.0",

    # ── Data validation ────────────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # ── Observability ──────────────────────────────────────────
    "mlflow>=2.18.0",
    "loguru>=0.7.2",
    "azure-monitor-opentelemetry>=1.6.4",

    # ── Utilities ──────────────────────────────────────────────
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
